# ogc-array

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TEST_IMPROVEMENT_PLAN.md  example-sources.md  guidelines.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: build.yml  test.yml
notebooks/: README.md
notebooks/examples/: basic_usage.ipynb  ogc_array_usage.ipynb  tilearray_usage.ipynb
ogc_array/: __init__.py
ogc_array/ogc/: core.py  types.py  wcs.py
src/tilearray/: __init__.py  _version.py  api.py  array.py  core.py  errors.py  tiles.py  types.py  typing.py
src/tilearray/ogc/: __init__.py  wcs.py  wms.py  wmts.py
src/tilearray/service/: __init__.py  base.py  config.py  wcs.py
src/tilearray/utils/: __init__.py
tests/: __init__.py  conftest.py  test_array.py  test_core.py  test_integration.py  test_ogc_array.py  test_ogc_core.py  test_ogc_tiles.py  test_ogc_wcs.py  test_tiles.py  test_types.py  test_wcs.py
tests/contract/wcs/: test_wcs_contract.py
tests/data/ogc_schema_examples/: lidar-composite-digital-terrain-model-dtm-1m.xml
tests/integration/: test_live_endpoints.py
tests/unit/: test_array.py  test_wcs_service.py
